# rust-video-intel

./: .gitignore  ARCHITECTURE.md  PROGRESS.md  RATATUI_FEASIBILITY.md  README.md  ROADMAP.md  TUI_IMPLEMENTATION_REPORT.md  TUI_README.md
.github/: CODEOWNERS
ffmpeg_ort/: README.md
ffmpeg_ort/src/: main.rs
gstreamed_candle/: Cargo.toml
gstreamed_candle/src/: process_image.rs
gstreamed_common/src/: pipeline.rs
gstreamed_ort/: Cargo.toml
gstreamed_ort/src/: inference.rs  main.rs  process_image.rs  process_video.rs
gstreamed_ort/src/tui/: app.rs  mod.rs  ui.rs
inference_common/: README.md
inference_common/src/: bbox.rs  frame_meta.rs  lib.rs  onnx_attributes.rs  tracker.rs  video_meta.rs
into_rerun/: Cargo.toml  README.md
ort_common/: README.md
ort_common/src/: lib.rs
parts/gstreamer/gstv1/: Cargo.toml
retail-surveillance/: .env.example  CODE_REVIEW.md  COMPLETE.md  Cargo.toml  DEMO_OUTPUT_SIMULATION.txt  EXAMPLE_RUN.md  HOW_POS_WORKS.md  PHASE1_COMPLETE.md  PHASE2_SUMMARY.md  PHASE3_POS_COMPLETE.md  PHASE4_DATABASE_COMPLETE.md  PHASE5_VIDEO_CLIPS_COMPLETE.md  PHASE6_ML_DETECTION_COMPLETE.md  POS_FLOW_DIAGRAM.txt  POS_INTEGRATION.md  PROJECT_STATUS.md  QUICK_START.md  README.md  RUN_WALKTHROUGH.md  SUMMARY.md  SYSTEM_OVERVIEW.txt  demo_pos.sh  docker-compose.yml  test_integration.sh  test_phase4.sh  test_phase5.sh  test_phase6.sh  test_pos.sh
retail-surveillance/config/: mosquitto.conf
retail-surveillance/migrations/: 001_initial_schema.sql  002_video_clips.sql  003_ml_tracking.sql
retail-surveillance/ml_service/: inference_server.py  requirements.txt
retail-surveillance/scripts/: export_yolo_nas.py  setup_db.sh
retail-surveillance/src/: api.rs  database.rs  lib.rs  main.rs  main_improved.rs  main_phase4.rs  main_phase5.rs  main_phase6.rs  main_with_pos.rs  ml_client.rs  pos_integration.rs  video_clip.rs
surveillance/: CLIENT_REPORT_NOV2_2025.md  COMMIT_MESSAGE_PHASE3.txt  CROWD_DETECTION_PROPOSALS.md  Cargo.toml  PHASE2_TEST_GUIDE.md  PHASE3_COMPLETE.txt  ROI_PROGRESS.md  TUI_LIVE_VIDEO_IMPLEMENTATION.md  debug_keys.rs  test_alt_keys.sh  test_detection_thresholds.sh  test_zone_fix.sh  test_zone_movement.sh
surveillance/.zed/: tasks.json
surveillance/ffmpeg_ort/: Cargo.toml
surveillance/gstreamed_candle/src/: inference.rs  main.rs  process_video.rs  yolov8.rs
surveillance/gstreamed_common/: Cargo.toml
surveillance/gstreamed_ort/: Cargo.toml  test_roi_phase1.rs  test_roi_phase3.rs  test_zone_adjustment_fix.rs
surveillance/gstreamed_ort/src/: inference.rs  main.rs  process_image.rs  process_video.rs
surveillance/gstreamed_ort/src/tui/: app.rs  events.rs  mod.rs  roi.rs  ui.rs
surveillance/inference_common/: Cargo.toml
surveillance/inference_common/src/: color_extractor.rs  detection_logger.rs
surveillance/into_rerun/src/: main.rs
surveillance/ort_common/: Cargo.toml
surveillance/ort_common/src/: yolo_parser.rs
