[package]
name = "inference_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# workspace
# ext
ab_glyph = { version = "0.2.29" }
anyhow.workspace = true
image.workspace = true
imageproc.workspace = true
log.workspace = true
ndarray.workspace = true
ort.workspace = true
similari-trackers-rs = { version = "0.26.11", default-features = false }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0"
